psd changes for new v4 gds lib

--- a/app/views/cos-tasks-proto/task1-does-it-contain-nanomaterials.html
+++ b/app/views/cos-tasks-proto/task1-does-it-contain-nanomaterials.html
@@ -42,8 +42,8 @@
                     <div id="nano-number-hint" class="govuk-hint">
                       Enter a number.
                     </div>
-                  <input class="govuk-input govuk-input--width-5 govuk-!-font-size-16" id="nano-qty" name="nano-qty" type="number" aria-describedby="nano-number-hint" spellcheck="false" pattern="[0-50]*" inputmode="numeric">
-              </div>
+                  <input class="govuk-input govuk-input--width-5 govuk-!-font-size-16" id="nano-qty" name="nano-qty" inputmode="numeric" aria-describedby="nano-number-hint" spellcheck="false" pattern="[0-50]*" inputmode="numeric">
+                </div>
 
               </div>
 
