--- a/app/views/psd-revised-flow/product-page-no-owner-not-included.html
+++ b/app/views/psd-revised-flow/product-page-no-owner-not-included.html
@@ -295,7 +295,7 @@
             </div>
         </dl> 
         
-        <div class="govuk-accordion govuk-!-margin-top-6 opss-accordion" data-module="govuk-accordion" id="accordion-default">
+        <div class="govuk-accordion govuk-!-margin-top-9 opss-accordion--sm-all" data-module="govuk-accordion" id="accordion-default">
             <div class="govuk-accordion__section">
               <div class="govuk-accordion__section-header">
                 <h2 class="govuk-accordion__section-heading">
