--- a/app/views/cosmetics-general/tasks/pg-does-it-contain-nanomaterials.html
+++ b/app/views/cosmetics-general/tasks/pg-does-it-contain-nanomaterials.html
@@ -41,7 +41,7 @@
                     <div id="nano-number-hint" class="govuk-hint">
                       Enter a number.
                     </div>
-                  <input class="govuk-input govuk-input--width-5 govuk-!-font-size-16" id="nano-qty" name="nano-qty" type="number" aria-describedby="nano-number-hint" spellcheck="false" pattern="[0-50]*" inputmode="numeric">
+                  <input class="govuk-input govuk-input--width-5 govuk-!-font-size-16" id="nano-qty" name="nano-qty" inputmode="numeric" aria-describedby="nano-number-hint" spellcheck="false" pattern="[0-50]*" inputmode="numeric">
               </div>
 
               </div>
