--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -74,7 +74,7 @@
                     </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
+            <div class="govuk-summary-list__row govuk-summary-list__row--no-actions">
                 <dt class="govuk-summary-list__key">
                     Allegation <!--span class="opss-numero" title="Number">&numero;</span-->   <!-- or Enquiry / Project -->
                 </dt>
@@ -102,8 +102,9 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                                        
-                    <!-- opss user: what is being alleged, shows here on current service -->
+                    <span class="opss-text-limit-scroll-s">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis recusandae rerum eos? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis recusandae rerum eos? 
+                    </span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                             <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
