contact prod owner pg updates

--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -294,6 +294,10 @@
                     Case - product page
                 </a> - Confirmation product was added 
             </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Contact the product record owner</a> page
+            </li>             
+           
                        
         </ol>
         
