--- a/app/views/psd-revised-flow/index11.html
+++ b/app/views/psd-revised-flow/index11.html
@@ -739,13 +739,13 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Email the product record owner</a>. The <abbr>Bcc</abbr> email will not include the product record owner's email address (no-replay@psd ?).
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Contact the product record owner</a>. 
                     
-                    <ul class="govuk-list govuk-list--bullet">
+                    <!--ul class="govuk-list govuk-list--bullet">
                         <li>
                             <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner-sent.html" target="_blank">Email sent</a>       
                         </li>
-                    </ul>
+                    </ul-->
                 </li> 
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/remove-product.html" target="_blank">Remove the product record</a> from the case
