--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -149,7 +149,7 @@
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-2">
                     <h4 class="govuk-heading-m">Product details</h4>
 
-                    <dl class="govuk-summary-list">
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -422,7 +422,7 @@
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-1">
                     <h4 class="govuk-heading-m">Product details</h4>
 
-                    <dl class="govuk-summary-list">
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -714,7 +714,7 @@
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-3">
                     <h4 class="govuk-heading-m">Product details</h4>
 
-                    <dl class="govuk-summary-list">
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
