--- a/app/views/psd-revised-flow/inc_products_pg_content_safe.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_safe.html
@@ -156,7 +156,7 @@
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-1">
                     <h4 class="govuk-heading-m">Product details</h4>
 
-                    <dl class="govuk-summary-list">
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
