ingredients list work

--- a/app/views/cosmetics-general/ingredients-ingredients-search-any.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search-any.html
@@ -69,9 +69,9 @@
                         Ingredients search
                     </a>
                 </li>
-                <!--li>
-                    <a href="/cosmetics-general/blank.html" class="govuk-link govuk-link--no-visited-state">Lorem ipsum search</a>
-                </li-->
+                <li>
+                    <a href="/cosmetics-general/ingredients-list.html" class="govuk-link govuk-link--no-visited-state">Ingredients list</a>
+                </li>
             </ul>
         </nav>
 
