--- a/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
+++ b/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
@@ -63,9 +63,9 @@
                             Ingredients search
                         </a>
                     </li>
-                    <!--li>
-                        <a href="/cosmetics-general/blank.html" class="govuk-link govuk-link--no-visited-state">Lorem ipsum search</a>
-                    </li-->
+                    <li>
+                        <a href="/cosmetics-general/ingredients-list.html" class="govuk-link govuk-link--no-visited-state">Ingredients list</a>
+                    </li>
                 </ul>
             </nav>
         
