--- a/app/views/psd-revised-flow/images-empty.html
+++ b/app/views/psd-revised-flow/images-empty.html
@@ -17,7 +17,7 @@
                 </h1>
 
                 <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">
-                    These are the <span class="govuk-!-font-weight-bold">case evidence</span> images showing damage, incidents, injuries or other case evidence.
+                    These are the case evidence images showing damage, incidents, injuries or other case evidence.
                 </p>
             </div>
             <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
