PSD confirmation updates

--- a/app/views/psd-revised-flow/create-a-product-record-add.html
+++ b/app/views/psd-revised-flow/create-a-product-record-add.html
@@ -1,4 +1,4 @@
-{% extends "layout-psd-menu_cases.html" %}
+{% extends "layout-psd-menu_products.html" %}
 
 {% block pageTitle %}
     Create a product record
