--- a/app/views/psd-revised-flow/help-old.html
+++ b/app/views/psd-revised-flow/help-old.html
@@ -16,15 +16,20 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-        <!--span class="govuk-caption-m">Recent changes to the Product Safety Database</span-->
+        <span class="govuk-caption-m">Recent changes to the Product Safety Database</span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            Cases and product records &ndash; help
+            Help &ndash; cases and product records
         </h1>
 
-        <p class="govuk-body govuk-!-margin-bottom-7">
-            How a case is created has changed. <!--br>You now create a case and add a product record to it. -->
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">
+            How a case is created has changed: You now create a case and then add a product - along with other information - to the case.
         </p>
     </div>
+    <!--div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
+        <div class="opss-text-align-right">
+
+        </div>
+    </div-->
 </div>
 
 <div class="govuk-grid-row">
@@ -32,11 +37,7 @@
         <h2 class="govuk-heading-m govuk-!-margin-bottom-2">About cases</h2>
 
         <p class="govuk-body">
-            A case records case specific information about an unsafe, or non-compliant, product. 
-            
-            Case specific information might include the business address for the importer of the product or risk assessments about the product. 
-            
-            In the Product Safety Database (<abbr>PSD</abbr>), information about a case and a product are seperate. Information which describes the product is recorded as a product record and you add the product record to your case. 
+            A case records case specific information. In the Product Safety Database (<abbr>PSD</abbr>), information about a case and a product are seperate. Information about a product is recorded as a product record and you include a product record in your case.
         </p>
     </div>                
 </div> 
@@ -46,60 +47,28 @@
 
         <div class="opss-panels__single">
 
-            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Create a case and add a product</h3>
-
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
                 <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;this is now quicker with fewer questions</span></li>
                 <li><span class="govuk-!-font-weight-bold">Add the product to your case</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
                         <li>Check to see the product does not already exist in the database - if it does, use its <abbr>PSD</abbr> reference number to add the product record to your case</li>
-                        <li>If a suitable product record does not already exist, create a new product record and use its <abbr>PSD</abbr> reference number to add it to your case</li>
+                        <li>If a suitable product record does not already exist, create a new product record for the product and use its <abbr>PSD</abbr> reference number to add it to your case</li>
                     </ul>
 
 
                 </li>
-                <li><span class="govuk-!-font-weight-bold">Continue to add any other information, such as businesses or test results, to your case at any time</span></li>
+                <li><span class="govuk-!-font-weight-bold">Add any businesses, supporting information and other details to your case</span>.</li>
             </ol>
+
+            <p class="govuk-body-s">
+                You can add information to your case at any time and any team member can add or edit different information. From the case product page you can now discover any cases - from across the country - which include the same product record.
+            </p>
 
         </div>
 
     </div>                
-</div>
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds opss-panels"> 
-
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-4 opss-text-align-center">&ndash; OR &ndash;</h2>
-
-    </div>                
-</div>
-
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds opss-panels"> 
-
-        <div class="opss-panels__single">
-
-            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Find a product and create a case</h3>
-
-            <ol class="govuk-list govuk-list--number govuk-list--spaced">
-                <li><span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the product records</span></li>
-                <li><span class="govuk-!-font-weight-bold">Create a new case for that product</span>
-
-                    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
-                        <li>When creating a case directly from a product record the product will automatically be added to the new case</li>
-                        <li>If a suitable product record does not exist you can create one</li>
-                    </ul>
-
-
-                </li>
-                <li><span class="govuk-!-font-weight-bold">Continue to add any other information, such as businesses or test results, to your case at any time</span></li>
-            </ol>
-
-        </div>
-
-    </div>                
-</div>
+</div>  
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds"> 
@@ -109,26 +78,29 @@
         </h2>
 
         <p class="govuk-body govuk-!-margin-bottom-6">
-            A product record only records information about a product. For example, its name, its barcode number and photographs of the product. It does not include information about safety concerns or incidents relating to the product because that is case specific information.
+            A product record only records information about a product which is, or has been, on the market (and does not include information about safety concerns or incidents).
         </p>
 
-        <p class="govuk-body govuk-!-margin-bottom-6">
-            A product record can be added to more than one case. Teams from across the country can create cases and add the same product record to their cases. 
-        </p> 
-        
-        <p class="govuk-body govuk-!-margin-bottom-6">
-            A product record describing a counterfeit version of a product should be a different product record to one describing the genuine product. 
-        </p>  
-        
-        <p class="govuk-body govuk-!-margin-bottom-6">
-            While several product records might accidently describe the same product, we aim to have only one product record in the Product Safety Database describing a product. 
-        </p>
-        
-        <p class="govuk-body govuk-!-margin-bottom-6">
-            You can create your own product record if an existing one doesn't fit your needs or one doesn't already exist for your product
-        </p>
+        <details class="govuk-details">
+            <summary class="govuk-details__summary">
+              <span class="govuk-details__summary-text">
+                About product records
+              </span>
+            </summary>
+            <div class="govuk-details__text">
 
-        <!--details class="govuk-details">
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                  <li>A product record only describes a product (and does not include any case information)</li>
+                  <li>A product record describing a counterfeit version of a product should be a different product record to one describing the genuine product</li>
+                  <li>While more than one product record might accidently describe the same product, we aim to have only one product record in the Product Safety Database describing a product</li>
+                  <li>The same product record can be added to many different cases</li>
+                  <li>Product records are found in the Products area of this digital service.</li>                  
+                </ul>
+
+            </div>
+        </details>  
+        
+        <details class="govuk-details">
             <summary class="govuk-details__summary">
               <span class="govuk-details__summary-text">
                 How product records work
@@ -138,6 +110,8 @@
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                     <li>We want the same product record (describing a specific product) to be used by all users creating a case about <em>that</em> product</li>
+                    <li>Because a product record only describes the product - and not information about a case - it can be reused in many different cases and cases which might be reporting different safety concerns</li>
+                    <li>You may need to <strong>create your own product record</strong> if an existing one doesn't fit your needs or one doesn't already exist for your product</li>
                     <li>Because the same product record should be used by all users creating cases about the same product, it is important that editing is controlled: At any one time only one team can edit a product record - as the product record owner - but any team can provide a product record owner with additional information to add to the product record</li>
                     <li>You can remove a product record from your case at any time and add a different one to your case if necessary</li>
                     <li>A team is only a product record owner while the product record is included in one of their open cases</li>
@@ -145,9 +119,7 @@
                 </ul>
 
             </div>
-        </details-->  
-
-        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">        
+        </details>  
         
         <h3 class="govuk-heading-s govuk-!-margin-top-6 govuk-!-margin-bottom-4">
             We have made the cases and products pages more useful and easier to use
@@ -156,7 +128,9 @@
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
             <li>There is now no need to input data about a product if a product record for your product already exists</li>
             <li>The product records will have improved information and detail</li>
-            <li>You can now see if other teams are using the same product record in their investigations (and if they are investigating the same product)</li>
+            <li>You now know if teams from across the country are using the same product record in their investigations (and are investigating the same product)</li>
+            <!--li>You now know if teams from across the country have already concluded investigations into the same product</li-->
+            <li>You can now see the progress and results of all cases currently using the same product record in their investigations and the conclusions of all closed cases which included the product record</li>
             <li>You can contact other teams you now know to be investigating the same product. (Teams can add other teams to a case)</li>
             <li>By using the same product records across different teams and cases nationally, there is greater transparency, and you are able to share information or even avoid duplicating work</li>
             <li>There will be fewer duplications of product entries in the database and searching for products will be more decisive.</li>
