help text update

--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -35,7 +35,9 @@
             A case records case specific information about an unsafe, or non-compliant, product. 
             
             Case specific information might include the business address for the importer of the product or risk assessments about the product. 
-            
+        </p>
+        
+        <p class="govuk-body">
             In the Product Safety Database (<abbr>PSD</abbr>), information about a case and a product are seperate. Information which describes the product is recorded as a product record and you add the product record to your case. 
         </p>
     </div>                
@@ -84,7 +86,7 @@
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
                 <li><span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the product records</span></li>
-                <li><span class="govuk-!-font-weight-bold">Create a new case for that product</span>
+                <li><span class="govuk-!-font-weight-bold">Create a new case for and from that product</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
                         <li>When creating a case directly from a product record the product will automatically be added to the new case</li>
