help content swap

--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -48,15 +48,15 @@
 
         <div class="opss-panels__single">
 
-            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Create a case and add a product</h3>
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Find a product and create a case</h3>
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
-                <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;this is now quicker with fewer questions</span></li>
-                <li><span class="govuk-!-font-weight-bold">Add the product to your case</span>
+                <li><span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the product records</span></li>
+                <li><span class="govuk-!-font-weight-bold">Create a new case for that product</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
-                        <li>Check to see the product does not already exist in the database - if it does, use its <abbr>PSD</abbr> reference number to add the product record to your case</li>
-                        <li>If a suitable product record does not already exist, create a new product record and use its <abbr>PSD</abbr> reference number to add it to your case</li>
+                        <li>When creating a case directly from a product record the product will automatically be added to the new case</li>
+                        <li>If a suitable product record does not exist you can create one</li>
                     </ul>
 
 
@@ -82,15 +82,15 @@
 
         <div class="opss-panels__single">
 
-            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Find a product and create a case</h3>
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Create a case and add a product</h3>
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
-                <li><span class="govuk-!-font-weight-bold">Find a product</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;by searching the product records</span></li>
-                <li><span class="govuk-!-font-weight-bold">Create a new case for and from that product</span>
+                <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;this is now quicker with fewer questions</span></li>
+                <li><span class="govuk-!-font-weight-bold">Add the product to your case</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
-                        <li>When creating a case directly from a product record the product will automatically be added to the new case</li>
-                        <li>If a suitable product record does not exist you can create one</li>
+                        <li>Check to see the product does not already exist in the database - if it does, use its <abbr>PSD</abbr> reference number to add the product record to your case</li>
+                        <li>If a suitable product record does not already exist, create a new product record and use its <abbr>PSD</abbr> reference number to add it to your case</li>
                     </ul>
 
 
@@ -102,6 +102,8 @@
 
     </div>                
 </div>
+
+
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds"> 
