--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -85,7 +85,7 @@
             <h3 class="govuk-heading-m govuk-!-margin-bottom-5">Create a case and add a product</h3>
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
-                <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;this is now quicker with fewer questions</span></li>
+                <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;from within the cases area</span></li>
                 <li><span class="govuk-!-font-weight-bold">Add the product to your case</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
