updates to cases page with products flagging

--- a/app/views/psd-revised-flow/new-cases-example_your_and_team.html
+++ b/app/views/psd-revised-flow/new-cases-example_your_and_team.html
@@ -76,7 +76,7 @@
                                 Case title
                             </th>
                             <th id="item-1" colspan="4" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach – chemical hazard</a>
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach - chemical hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -93,7 +93,7 @@
                                 lorem ipusm
                             </td>
                             <td headers="updated item-1 meta-1" class="govuk-table__cell">
-                                about 6 hours ago
+                                About 6 hours ago
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -133,7 +133,7 @@
                                 lorem ipusm
                             </td>                                
                             <td headers="updated item-2 meta-2" class="govuk-table__cell">
-                                about 2 months ago
+                                About 22 hours ago
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -142,8 +142,6 @@
                             </th>
                             <td headers="item-2 status-02" colspan="4" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
-                                <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
                         </tr>
                     </tbody>
@@ -216,6 +214,9 @@
                             </th>
                             <td headers="item-4 status-04" colspan="4" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Project</span>
+
+                                <span class="govuk-visually-hidden"> | </span>
+                                <span class="opss-tag opss-tag--risk4">This case has not added any products</span>
                             </td>
                         </tr>
                     </tbody>
@@ -400,10 +401,7 @@
                             </th>
                             <td headers="item-9 status-09" colspan="4" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
-                                <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--risk1">Serious risk case</span>
-                                <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
+                                
                             </td>
                         </tr>
                     </tbody>
@@ -590,6 +588,9 @@
                             </th>
                             <td headers="item-14 status-14" colspan="4" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
+
+                                <span class="govuk-visually-hidden"> | </span>
+                                <span class="opss-tag opss-tag--risk4">This case has not added any products</span>
                             </td>
                         </tr>
                     </tbody>
@@ -813,6 +814,10 @@
                             </th>
                             <td headers="item-20 status-20" colspan="4" class="govuk-table__cell">
                                 <span class="opss-tag opss-tag--std">Allegation</span>
+
+                                <span class="govuk-visually-hidden"> | </span>
+                                <span class="opss-tag opss-tag--risk4">This case has not added any products</span>
+
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
