--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -129,7 +129,7 @@
         </p>
         
         <p class="govuk-body govuk-!-margin-bottom-6">
-            You can create your own product record if an existing one doesn't fit your needs or one doesn't already exist for your product
+            You can create your own product record if an existing one doesn't fit your needs or one doesn't already exist for your product.
         </p>
 
         <!--details class="govuk-details">
@@ -158,7 +158,7 @@
         </h3>
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-            <li>There is now no need to input data about a product if a product record for your product already exists</li>
+            <li>There is no longer a need to input data about a product if a product record for your product already exists</li>
             <li>The product records will have improved information and detail</li>
             <li>You can now see if other teams are using the same product record in their investigations (and if they are investigating the same product)</li>
             <li>You can contact other teams you now know to be investigating the same product. (Teams can add other teams to a case)</li>
