--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -274,14 +274,8 @@ ul.opss-radio-list {
         color: govuk-colour("red"); 
         text-transform: none; 
 
-        &::before {
-            content: '*** '; 
-            vertical-align: middle;
-        }        
-        &::after {
-            content: ' ***';
-            vertical-align: middle;
-        }
+        /* &::before {content: '*** '; vertical-align: middle; }        
+        &::after {content: ' ***'; vertical-align: middle; } */
     }    
     &.opss-tag--plain {
         @include opss-font-size($s: 14px, $l: 1.3);
